crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__starred_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bin_op/starred_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            14,
        ),
        range: 0..14,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        6,
                    ),
                    range: 0..6,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(
                                5,
                            ),
                            range: 0..6,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(
                                        4,
                                    ),
                                    range: 4..6,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                3,
                                            ),
                                            range: 5..6,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        13,
                    ),
                    range: 7..14,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(
                                12,
                            ),
                            range: 7..14,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        8,
                                    ),
                                    range: 7..8,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Pow,
                            right: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(
                                        11,
                                    ),
                                    range: 12..14,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                10,
                                            ),
                                            range: 13..14,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x + *y
  |     ^^ Syntax Error: Starred expression cannot be used here
2 | x ** *y
  |


  |
1 | x + *y
2 | x ** *y
  |      ^^ Syntax Error: Starred expression cannot be used here
  |
